# bet_microservices

./: .env.example  .evn.example  Dockerfile  README.md  bet_maker.Dockerfile  bet_maker_entrypoint.sh  docker-compose.yml  line_provider.Dockerfile  line_provider_entrypoint.sh  ngnix_conf.conf  ngnix_config.conf  pyproject.toml
bet_maker/: app.py
bet_maker/api/: base.py  bets.py  login.py  users.py
bet_maker/core/: config.py  security.py
bet_maker/db/: models.py  session.py
bet_maker/db/utils/: bets.py  users.py
bet_maker/schemas/: bet.py  users.py
line_provider/: app.py  line_entrypoint.sh  line_provider.Dockerfile
